--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -7,8 +7,9 @@
 <body>
     <h1> Phishing Email Classifier</h1>
     <form method="POST">
-        <textarea name="emai_text" rows="10" cols="60" placeholder="Please paste your email here..."></textarea>
+        <textarea name="email_text" rows="10" cols="60" placeholder="Please paste your email here..."></textarea>
         <br><br>
+        <button type="submit">Check</button>
     </form>
 
     {% if prediction %}
