--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -20,12 +20,34 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                {% if current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Logged in as {{ current_user.username }}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                    </li>
+                {% endif %}
+                {% if current_user.is_authenticated and current_user.role =='admin' %}
+                    <li class ='nav-item'>
+                        <a class = 'nav-link' href="{{ url_for('admin_dashboard') }}"> Admin</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
 </nav>
+
 
 <div class="container mt-3">
     {% with messages = get_flashed_messages(with_categories=true) %}
