Added, edit_users page, to be able delete users and modify role. made relevant changes in run_app, models etc. database had to be reset, since email field was added.

--- a/flask_app/templates/admin/admin_dashboard.html
+++ b/flask_app/templates/admin/admin_dashboard.html
@@ -10,7 +10,7 @@
         <!-- Add any admin-only tools or panels here -->
 
     <div class="d-grid gap-2 col-6 mx-auto">
-        <a href="#" class="btn btn-outline-primary">Manage users</a>
+        <a href="{{ url_for('edit_users') }}" class="btn btn-outline-primary">Manage users</a>
         <a href="classification_log.html" class="btn btn-outline-secondary">View logs</a>
         <a href="#" class="btn btn-outline-dark">System settings</a>
     </div>
