--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -4,13 +4,21 @@
 <div class="container mt-5">
     <h2>Register</h2>
     <form method="POST" action="{{ url_for('register') }}">
-        <div class="form-group">
+        <div class="form-group mb-3">
+            <label>Email Address</label>
+            <input type="email" name="email" class="form-control" required>
+        </div>
+          <div class="form-group mb-3">
             <label>Username</label>
             <input type="text" name="username" class="form-control" required>
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
             <label>Password</label>
             <input type="password" name="password" class="form-control" required>
+        </div>
+         <div class="form-group mb-3">
+            <label>Confirm Password</label>
+            <input type="password" name="confirm_password" class="form-control" required>
         </div>
         <button type="submit" class="btn btn-success">Register</button>
     </form>
