--- a/flask_app/templates/admin/classification_log.html
+++ b/flask_app/templates/admin/classification_log.html
@@ -9,6 +9,15 @@
 
         {% if log_entries %}
             <div class="table-responsive">
+                <form method="get" class="mb-3">
+                    <div class="input-group">
+                        <input type="text" name="q" class="form-control" placeholder="Search logs..." value="{{ q or '' }}">
+                        <button type="submit" class="btn btn-primary">Search</button>
+                        {% if q %}
+                            <a href="{{ url_for('classification_log') }}" class="btn btn-secondary">Clear</a>
+                        {% endif %}
+                    </div>
+                </form>
                 <table class="table table-striped table-bordered">
                     <thead>
                         <tr>
