Added test cases, to the search filter feature,i.e. testing that the search filter is working in the correct way. Had to make some changes to the HTML due to some bugs.

--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand-sm bg-dark" data-bs-theme="dark">
     <div class="container">
-        <a class="navbar-brand" href="{{ url_for('home') }}">Phishing Detection App</a>
+        <a class="navbar-brand" href="{% if current_user.is_authenticated %}{{ url_for('home') }}{% else %}{{ url_for('login') }}{% endif %}">Phishing Detection App</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
